--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.7",
     "react-scroll-trigger": "^0.6.14",
+    "react-select": "^5.5.2",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.28.1",
     "react-spring": "^9.3.2",
     "react-use-measure": "^2.1.1",
