--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.1.3",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "leva": "^0.9.27",
@@ -13,6 +14,7 @@
     "react": "^17.0.2",
     "react-countup": "^6.3.1",
     "react-dom": "^17.0.2",
+    "react-email-validator": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.7",
@@ -28,6 +30,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
